fix weirdness where the long description is cut off now

--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -48,7 +48,7 @@
     padding: 10px 15px;
     font-size: 16px;
     text-overflow: ellipsis;
-    height: 24px;
+    height: 44px;
     overflow: hidden;
     white-space: nowrap;
   }
